--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 960px) {
 	.content-wrapper {
-		background-color: #fff;
+		background-color: #ECF0F1;
 	}
 }
 
@@ -24,7 +24,7 @@ header {
 .content-wrapper {
 	width: 100%;
 	margin: 0 auto;
-	background-color: ##fff;
+	background-color: #ECF0F1;
 }
 
 .title-area {
@@ -69,13 +69,54 @@ nav ul li a {
 	text-decoration: none;
 	text-transform: uppercase;
 }
+.wrapper2{
+	position: relative;
+}
+aside{
+	position: absolute;
+	top: -30px;
+	right: -165px;
+	width: 160px;
+	height: 200px;
+}
+
+.ugly-side-box {
+	background-color: #ECF0F1;
+	box-shadow: 5px 5px 2.5px #666;
+}
+
+.ugly-side-box ul {
+	list-style-type: none;
+	margin: 10px;
+	padding: 0px;
+}
+
+.items {
+	font-size: .75rem;
+	padding-bottom: 5px;
+	color: grey;
+}
+
+.topic {
+	font-size: .90rem;
+	font-weight: bold;
+	color: black;
+	padding-bottom: 5px;
+}
+
+.items {
+	padding-left: 10px;
+}
 
 
-.section {
-	background-color: #fff;
+.first-section {
 	padding: 0 20px;
 	margin-bottom: 50px;
+}
 
+.section {
+	padding: 0 20px;
+	margin-bottom: 50px;
 }
 
 .section p {
@@ -126,14 +167,11 @@ table {
 }
 
 .greybox {
-	width: 100%;
+	width: 95%;
 	background-color: lightgrey;
 	height: 100px;
-}
-
-.greybox p {
 	font-family: serif;
-	padding: 20px 0;
+	padding: 2.5% 2.5%;
 }
 
 .ordered-list p {
@@ -146,58 +184,178 @@ table {
 	color: slategrey;
 }
 
-.inputs {
+.section .comments {
+	width: 100%;	
+}
+
+.user-form {
+	/*width: 95%;*/
+	overflow: hidden;
+}
+
+.email {
+	/*border: solid 1px red;*/
+	/*overflow: hidden;*/
+	width: 100%;
+}
+
+.form-inputs {
+	/*border: solid 1px blue;*/
 	display: block;
 	width: 100%;
 	text-align: right;
-	padding: 5px 0;
+	padding: 1% 0;
+	/*float: right;*/
+	overflow: hidden;
 }
 
-.inputs label {
-	width:10%;
+.form-inputs label {
+	width: 20%;
+	/*font-size: .75rem;*/
+	/*border: solid 1px lawngreen;*/
+
 }
 
-.inputs input {
-	width: 80%;
+.form-inputs input {
+	width: 70%;
+	/*padding-left: 20px;*/
+	margin-top: 
 }
 
 h4 {
 	text-transform: uppercase;
 	color: darkgrey;
 	font-size: 13px;
-	padding-left: 30px; 
+	padding-left: 15px; 
     position: relative;  
-    z-index: 1;
+    /*z-index: 1;*/
 }
 
 h4:after {
     position: absolute;
-    top: 51%;
+    top: 50%;
     overflow: hidden;
-    width: 87%;
+    width: 90%;
     height: 1px;
     content: '\a0';
     background-color: grey;
     margin-left: 5px;
 }
+
 h4:before {
-    margin-left: -5%;
+    margin-left: -2%;
     text-align: right;
     position: absolute;
-    top: 51%;
+    top: 50%;
     overflow: hidden;
-    width: 4%;
+    width: 1.3%;
     height: 1px;
     content: '\a0';
     background-color: grey;
 }
-}
+
 .color {
     background-color: #ccc;
 }
 
+.commentbox {
+	margin: 0 auto;
+	width: 100%;
+}
 
+textarea {
+	/*display: inline-block;*/
+	width: 100%;
+	height: 100px;
+}
 
+.commentbox input {
+	width: 100%;
+	background-color: red;
+	color: #fff;
+	border: none;
+	margin-top: 20px;
+	height: 30px;
+	text-transform: uppercase;
+	font-size: 12px;
+	vertical-align: center;
+}
+
+.user-comments {	
+	padding: 0 20px 50px 20px;
+}
+
+.avatar {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.user-info {
+	display: inline-block;
+}
+
+.user-info p {
+	padding: 0;
+	color: grey;
+	font-size: 13px;
+	font-style: italic;
+}
+
+.user-info h5 {
+	margin: 0px;
+	font-size: 16px;
+}
+
+.sub-comments {
+	margin-left: 50px;
+	border-left: 1px solid lightgrey;
+	padding-left: 20px;
+}
+
+@media screen and (max-width: 433px) {
+	.form-inputs label {
+		font-size: .75rem;
+	}
+
+	h4:after {
+	    width: 75%;
+	}
+}
+
+@media screen and (max-width: 1311px) {
+aside{
+	position: absolute;
+	top: -30px;
+	right: -105px;
+	width: 100px;
+	height: 250px;
+	}
+}
+
+@media screen and (max-width: 1195px) {
+	aside{
+	position: relative;
+	width: 100%;
+	height: 50px;
+	left: 0;
+	top:0;
+	box-shadow: 1px 1px .5px #666;
+	}
+
+	.ugly-side-box ul {
+	float: left;
+	}
+
+.items {
+	float: left;
+	}
+}
+
+@media screen and (max-width: 440px) {
+	aside{
+	/*width: 100%;*/
+	height: 120px;
+	}
 
 
 
